--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,3 +48,17 @@ input{
     color: #fff;
     border-bottom: 16px solid #fff;
 }
+
+.resultado {
+    padding: 16px;
+    margin-top: 120px;
+    border: 8px dotted #fff;
+    display: none;
+
+    span{
+        font-weight: bold;
+        font-size: 3em;
+        display: block;
+    }
+
+}
